--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="wrapper">
         <div>
             <header>
-                <img class="logo" src="" alt="Cahee">
+                <img class="logo" src="./img/logo.png" alt="Cahee">
                 <nav>
                     <p>Home</p>
                     <p>About</p>
