--- a/index.html
+++ b/index.html
@@ -12,24 +12,27 @@
 
 <body>
     <div class="wrapper">
+        <header class="header">
+            <img class="logo" src="./img/logo.png" alt="Cahee">
+            <nav class="navbar">
+                <a class="navbar__item" href="#">Home</a>
+                <a class="navbar__item" href="#about-us">About</a>
+                <a class="navbar__item" href="#">Services</a>
+                <a class="navbar__item" href="#">Gallery</a>
+                <a class="navbar__item" href="#">Blog</a>
+                <a class="navbar__item" href="#">Contact</a>
+            </nav>
+        </header>
         <section class="homepage">
-            <header class="header">
-                <img class="logo" src="./img/logo.png" alt="Cahee">
-                <nav class="navbar">
-                    <a class="navbar__item" href="#">Home</a>
-                    <a class="navbar__item" href="#about-us">About</a>
-                    <a class="navbar__item" href="#">Services</a>
-                    <a class="navbar__item" href="#">Gallery</a>
-                    <a class="navbar__item" href="#">Blog</a>
-                    <a class="navbar__item" href="#">Contact</a>
-                </nav>
-            </header>
             <article class="intro">
                 <h3 class="intro__title">Fresh Life</h3>
                 <p class="intro__description">Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
                     ad minim veniam, quis nostrud exercitation ullamco.</p>
                 <button class="intro__button">Get free now</button>
             </article>
+            <a href="#about-us">
+                <img class="page-scroll" src="./img/scroll.png" alt="scroll" />
+            </a>
         </section>
 
         <section class="about-us" id="about-us">
