--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Fresh Life</title>
     <link rel="stylesheet" href="./css/main.css" />
     <link href="https://fonts.googleapis.com/css2?family=Special+Elite&display=swap" rel="stylesheet" />
+    <link rel="stylesheet" href="./css/shakeX.css" />
 </head>
 
 <body>
